# Seer

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  T_matrix.cfg  cmake_install.cmake  data.txt  package.xml  seer_cam.yml
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  seer-msg-extras.cmake.develspace.in  seer-msg-extras.cmake.installspace.in
catkin_generated/installspace/: seer-msg-paths.cmake  seer.pc  seerConfig.cmake
catkin_generated/stamps/seer/: package.xml.stamp
cmake/: findDependencies.cmake  options.cmake  seer-genmsg-context.py  seer-genmsg.cmake
include/: KalmanFilter.h  rigidtransform.h
include/AprilTags/: TagDetection.h
launch/: april_tag_usb.launch  aruco_tag_node.launch
lib/: libaruco.so.3.0
src/: 2.cpp  KalmanFilter.cc  T_matrix.cfg  april_tag_node.cpp  aruco_tag_node.cpp  aruco_tag_node2.cpp  img_st.cpp  mode_3.cpp.cpp  publisher.cpp  rigidtransform.cc
src/apriltags/: TagDetection.cc
src/arucotags/: CMakeLists.txt  markerdetector.cpp  posetracker.cpp
